--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/damian-lis/best-blog/issues"
   },
-  "homepage": "https://github.com/damian-lis/best-blog#readme"
+  "homepage": "https://github.com/damian-lis/best-blog#readme",
+  "devDependencies": {
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2"
+  }
 }
