--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "homepage": "https://github.com/damian-lis/best-blog#readme",
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-async-to-generator": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
+    "@babel/runtime": "^7.14.6",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.0.0",
     "mini-css-extract-plugin": "^2.1.0",
