--- a/package.json
+++ b/package.json
@@ -27,7 +27,14 @@
     "@babel/runtime": "^7.14.6",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.0.0",
+    "eslint": "^7.31.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "mini-css-extract-plugin": "^2.1.0",
+    "prettier": "^2.3.2",
     "sass": "^1.35.2",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.1.0",
